--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -554,6 +554,7 @@
     </div>
 </div>
 
-<script src="/js/index.js"></script>
+<!-- 모듈 방식으로 JavaScript 파일 로드 -->
+<script type="module" src="/js/app.js"></script>
 </body>
 </html>
