--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -138,15 +138,15 @@ body {
     color: #333;
 }
 
-/* Sales UI 스타일 추가 */
 .sales-container {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2000;
-    max-width: 700px;
+    max-width: 900px;
     width: 90%;
+    height: 800px;
     background: white;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -167,6 +167,7 @@ body {
 
 /* Sales UI 추가 스타일 */
 .sales-header {
+    height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -220,7 +221,6 @@ body {
 }
 
 .sales-scrollable-container {
-    max-height: 500px;
     overflow-y: auto;
 }
 
@@ -539,8 +539,8 @@ button:hover {
 .footer-center-buttons {
     height: 75px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr); /* 5열 */
-    grid-template-rows: repeat(2, 1fr);    /* 2행 */
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     gap: 5px;
     margin: 5px;
 }
@@ -644,4 +644,49 @@ button:hover {
     background-color: white;
     display: none;
     border-radius: 8px;
+}
+
+.monthly-calendar {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-gap: 10px;
+    max-height: 620px;
+    overflow-y: auto;
+}
+
+.calendar-cell {
+    border: 1px solid #ddd;
+    padding: 5px;
+    text-align: center;
+}
+
+.calendar-cell.empty {
+    background-color: #f5f5f5;
+}
+
+.date-label {
+    font-weight: bold;
+    font-size: 0.8em;
+}
+
+.sales-summary {
+    margin-top: 8px;
+    font-size: 0.8em;
+}
+
+.yearly-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 12px;
+}
+
+.year-cell {
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+}
+.month-label {
+    font-weight: bold;
+    margin-bottom: 6px;
 }
