--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -38,6 +38,7 @@ body {
 
 .header-right {
     display: flex;
+    align-items: center;
     gap: 30px;
 }
 
@@ -98,11 +99,10 @@ body {
 }
 
 .right-panel {
+    height: 805px;
     width: 60%;
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    padding: 10px;
 }
 
 .category-row {
@@ -490,10 +490,12 @@ button:hover {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     gap: 8px;
+    padding: 0 10px;
+    box-sizing: border-box;
 }
 
 .menuEntity-item {
-    height: 40px;
+    height: 45px;
     background-color: #ffe4e1;
     border: 1px solid #ccc;
     display: flex;
@@ -505,10 +507,14 @@ button:hover {
 }
 
 .category-grid {
+    width: 100%;
+    height: 128px;
     display: grid;
+    padding: 10px;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(2, auto);
     gap: 8px;
+    box-sizing: border-box;
 }
 
 .category-button {
@@ -520,7 +526,6 @@ button:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 8px;
     font-size: 14px;
     word-break: keep-all;
     white-space: pre-wrap;
@@ -689,4 +694,8 @@ button:hover {
 .month-label {
     font-weight: bold;
     margin-bottom: 6px;
+}
+
+#menuGrid {
+    height: 100%;
 }
