--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -699,3 +699,15 @@ button:hover {
 #menuGrid {
     height: 100%;
 }
+
+.order-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 4px 8px;
+    border-bottom: 1px solid #ddd;
+}
+
+.order-item span {
+    flex: 1;
+    text-align: center;
+}
