--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,7 @@
         </div>
     </div>
     <div id="footerPanel"></div>
+    <div id="memberPopupContainer"></div>
 </div>
 <div class="overlay" style="display: none;"></div>
 <div id="salesTime" style="display: none;"></div>
